--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -321,7 +321,7 @@ The text may convey status information or connection properties
 
 %FIXME todo insert: The string may contain \t, \n, \r, \f, \b, \x0A with same meaning as in C/C++
 
-Defaults: \textit{color}=#005030}\\\hline
+Defaults: \textit{color}=\#005030}\\\hline
 %%
 \tbf{tt=}\textit{tooltip-text}
 &
@@ -446,7 +446,7 @@ Examples:
 
 \begin{itemize}
   \item \ttt{"i=device/server,gold"} creates a gold server icon
-  \item \ttt{"i=place/globe,\#808080,100"} makes the icon grayscale
+  \item \ttt{"i=misc/globe,\#808080,100"} makes the icon grayscale
   \item \ttt{"i=block/queue,white,100"} yields a "burnt-in" black-and-white icon
 \end{itemize}
 
@@ -506,7 +506,7 @@ by folders. These categories include:
   \item block/ - icons for subcomponents (queues, protocols, etc).
   \item device/ - network devices: servers, hosts, routers, etc.
   \item abstract/ - symbolic icons for various devices
-  \item place/ - subnet, building, town, city; map symbols
+  \item misc/ - node, subnet, cloud, building, town, city, etc.
   \item msg/ - icons that can be used for messages
 \end{itemize}
 
