--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -215,7 +215,7 @@ for (cQueue::Iterator queueIter(queue); !queueIter.end(); queueIter++)
 
 
 
-\subsection{Error handling {\new}}
+\subsection{Error handling}
 
 
 When library objects detect an error condition, they throw a C++ exception.
@@ -228,7 +228,7 @@ At times it can be useful to be able stop the simulation at the place of the err
 (just before the exception is thrown) and use a C++ debugger to look
 at the stack trace and examine variables. Enabling the \ttt{debug-on-errors}
 ini file entry lets you do that -- check it in section
-\ref{sec:ch-run-sim:general-section}.
+\ref{sec:ch-run-sim:general-section}  {\new}.
 
 If you detect an error condition in your code, you can stop the
 simulation with an error message using the \fname{opp\_error()} function.
