--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,5 @@
+2005-03-31  ------ omnetpp-3.1 released ------
+
 2005-03-22  Andras Varga
 
 	* cenvir.h: cEnvir::getParameter() return type changed from 
