--- a/samples/neddemo/ChangeLog
+++ b/samples/neddemo/ChangeLog
@@ -1,3 +1,5 @@
+2005-03-31  ------ omnetpp-3.1 released ------
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-11-23  ------ omnetpp-3.0b1 released ------
