--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,5 @@
+2005-03-31  ------ omnetpp-3.1 released ------
+
 2005-03-22  Andras Varga
 
 	* cmdenv.cc/h: handling of -h option moved into TOmnetApp base class.
