--- a/src/plove/ChangeLog
+++ b/src/plove/ChangeLog
@@ -1,3 +1,5 @@
+2005-03-31  ------ omnetpp-3.1 released ------
+
 2005-01-17  Andras Varga
 
 	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
