--- a/samples/README
+++ b/samples/README
@@ -1,4 +1,4 @@
-This directory contains a dozen simulation models to demonstrate the features
+This directory contains several simulation models to demonstrate the features
 of the simulation framework. These simulations are intentionally kept simple to 
 facilitate understanding, even at the cost of sacrificing some realistic 
 details.
