--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,5 +1,14 @@
 2005-03-31  ------ omnetpp-3.1 released ------
 
+2005-03-30  Andras Varga
+
+	* plotedit.tcl: update canvas scrollregion after move/create
+	operations
+
+	* plotedit.tcl, datadict.tcl: changes module type of freshly created
+	submodule from Module to Unknown. When user double-clicks on an Unknown
+	submodule, tell him/her to fill in the submodule type.
+
 2005-01-17  Andras Varga
 
 	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
