--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-04  Andras Varga
+
+	* fix: gned didn't understand module parameters of type xml, introduced
+	in 3.0.
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-03-30  Andras Varga
