--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-05  Andras Varga
+
+	* cinifile.cc: fix: getAsFilenames() crashed if ini file entry is was ""
+	[reported by Tom Parker]
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-03-22  Andras Varga
