--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-21  Andras Varga
+
+	* added implementation of timeline
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-03-22  Andras Varga
