--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-27  Andras Varga
+
+	* cobject.cc: fixed bug in cObject copy ctor. Problem hasn't surfaced
+	earlier because no subclass used this ctor (they use op=) [reported by
+	Shanti]
+
 2005-04-21  Andras Varga
 
 	* util.cc: implemented simtimeToStrShort().
