--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-06 Andras Varga
+
+	* ned.dtd, ned.y, etc: added support for message declarations in msg 
+	files (message-decl element, MessageDeclNode class)
+	
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2004-12-29  ------ omnetpp-3.0 released ------
