*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1098,8 +1098,8 @@ with the following differences:
 
 \begin{itemize}
   \item{{\textasciicircum} is used for power-of (and not bitwise XOR as in C)}
-  \item{\# is used for logical XOR (same as != between logical values), and
-        \#\# is used for bitwise XOR}
+  \item{\#\# is used for logical XOR (same as != between logical values), and
+        \# is used for bitwise XOR}
   \item{the precedence of bitwise operators (\&, |, \#) have been raised
         to bind stronger than relational operations. This precedence is usually
         more convenient than the C/C++ one.}
