*** empty log message ***

--- a/src/plove/ChangeLog
+++ b/src/plove/ChangeLog
@@ -1,7 +1,7 @@
 2005-07-08  Andras Varga
 
-	* engine: new filters: divider, modulo, difference, sum, slope, 
-	slidingwinavg
+	* engine: new filters: divider, modulo, difference, sum, 
+	diffquot [from Michael Tuexen], slidingwinavg
 
 	* fix: in winavg, average of last <winsize values wasn't written out
 
